updated css to correct contrast errors

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -28,7 +28,7 @@ header {
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: center; 
-    background-color: var(--primary-color);
+    background-color: var(--accent2-color);
     max-width: 1200px;
     margin: 0 auto;
 }
